--- a/ejercicios-DOM/ejercicio_2/index.html
+++ b/ejercicios-DOM/ejercicio_2/index.html
@@ -20,4 +20,7 @@
     <div class="fn-insert-here"></div>
     <div class="fn-insert-here"></div>
   </body>
+
+  <script src="index.js"></script>
+
 </html>
