--- a/ejercicios-DOM/ejercicio_3/index.html
+++ b/ejercicios-DOM/ejercicio_3/index.html
@@ -10,4 +10,7 @@
     <p class="fn-remove-me">Bye bye</p>
 		<div data-function="printHere"></div>
 </body>
+
+<script src="index.js"></script>
+
 </html>
