--- a/ejercicios-DOM/ejercicio_1/index.html
+++ b/ejercicios-DOM/ejercicio_1/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <button class="showme">Pillame!</button>
-		<h1 id="pillado">Aqui estoy 8)</h1>
+		<h1 id="pillado">Aqui estoy 8</h1>
 		<p>Soy el power ranger Amarillo</p>
     <p>Soy el power ranger Rojo</p>
     <p>Soy el power ranger Azul</p>
@@ -22,5 +22,7 @@
     <span data-function="testMe">Rick</span>
     <span data-function="testMe">Morty</span>
 </body>
+
+<script src="index.js"></script>
 
 </html>
