Ejercicios DOM listos, tarde productiva

--- a/ejercicios-DOM/ejercicio_4/index.html
+++ b/ejercicios-DOM/ejercicio_4/index.html
@@ -9,5 +9,13 @@
 	<input class="click" type="text"/>
 	<input class="focus" type="text"/>
 	<input class="value" type="text"/>
+
+    <br>
+    <br>
+    <button id="btnToClick" type="button"> Boton ejercicio 1 </button>
+
 </body>
+
+<script src="index.js"></script>
+
 </html>
