--- a/ejercicios-es6-y-Asincronia/Ejercicio_9/Ejercicio_9.html
+++ b/ejercicios-es6-y-Asincronia/Ejercicio_9/Ejercicio_9.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Ejercicio_9.css">
 </head>
-<body>
-    <img class="random-image">
+
+<body id="body">
+
+    <div class="div">
+    <h1 id="Nombre"></h1>
+    </div>
+
+    <div class="div">
+    <img id="random-image">
+    </div>
+
+    <div class="div">
+    <button id="Boton">Pokémon aleatorio!!</button>
+    </div>
+
     <script src="Ejercicio_9.js"></script>
 </body>
 </html>
